--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "chroma-js": "^2.4.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
