--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chroma-js": "^2.4.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-numeric-input": "^2.2.3",
     "recoil": "^0.7.6"
